--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 OAuth2AppClientId=ABwx1ki3FNBK4stKJTgFqGA9rLdXT1Lf9JuiO2cIZJkMzhIX5e
 OAuth2AppClientSecret=urmZt5n7YRC95Q9SS8DjNN3Wnp0JK1qABVDLhbOF
-OAuth2AppRedirectUri=https://developer.intuit.com/v2/OAuth2Playground/RedirectUrl
+OAuth2AppRedirectUri=https://localhost:8080/oauth2redirect
 
 #QBO API endpoint
 IntuitAccountingAPIHost=https://sandbox-quickbooks.api.intuit.com
